--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
     background-position: center center;
     background-size: cover;
     display: flex;
-    align-items: canter;
+    align-items: center;
 }
 
 .first-view-text{
